Fixed CSS issues on Firefox

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -1,8 +1,10 @@
 #App {
   height: 100vh;
   width: 100vw;
-  text-align: -webkit-center;
+  text-align: center;
   font-family: 'Noto Serif JP', serif;
+  -ms-overflow-style: none; /* IE 11 */
+  scrollbar-width: none; /* Firefox 64 */
 }
 
 .fa-snowflake {
@@ -88,6 +90,7 @@
 }
 
 #display-weather-wrapper__daily-weather {
+  scrollbar-width: none;
   overflow: scroll;
   width: 95%;
 }
@@ -105,7 +108,8 @@
 #daily-weather__carousel {
   overflow: scroll;
   width: 95%;
-  text-align: -webkit-center;
+  text-align: center;
+  scrollbar-width: none;
 }
 
 #carousel__daily-weather {
